# LearnCPP

./: .gitignore  CMakeLists.txt  LearnCPP.sln  LearnCPP.vcxproj  LearnCPP.vcxproj.filters  Syrum.sln  Syrum.vcxproj  Syrum.vcxproj.filters  main.cpp  syrum
include/: LogBuffer.h  Player.h  calculator.h
src/: LogBuffer.cpp  Player.cpp  calculator.cpp  main  main.cpp
